StgShqrpGraphic/GLenv/include/GLFW/glfw3.h


    typedef void (*GLFWglproc)(void);
    typedef void (*GLFWvkproc)(void);
    typedef struct GLFWwindow GLFWwindow;
    typedef struct GLFWcursor GLFWcursor;
    typedef void (*GLFWframebuffersizefun)(GLFWwindow* window, int width, int height);
    typedef void (*GLFWwindowcontentscalefun)(GLFWwindow* window, float xscale, float yscale);
    typedef void (*GLFWmousebuttonfun)(GLFWwindow* window, int button, int action, int mods);
    typedef void (*GLFWcursorposfun)(GLFWwindow* window, double xpos, double ypos);
    typedef void (*GLFWcursorenterfun)(GLFWwindow* window, int entered);
    typedef void (*GLFWscrollfun)(GLFWwindow* window, double xoffset, double yoffset);
    typedef void (*GLFWkeyfun)(GLFWwindow* window, int key, int scancode, int action, int mods);
    typedef void (*GLFWcharfun)(GLFWwindow* window, unsigned int codepoint);
    typedef void (*GLFWcharmodsfun)(GLFWwindow* window, unsigned int codepoint, int mods);
    typedef void (*GLFWdropfun)(GLFWwindow* window, int path_count, const char* paths[]);
    typedef void (*GLFWjoystickfun)(int jid, int event);
    typedef struct GLFWimage
    {
        int width;
        int height;
        unsigned char* pixels;
    } GLFWimage;
    typedef struct GLFWgamepadstate
    {
        unsigned char buttons[15];
        float axes[6];
    } GLFWgamepadstate;
    GLFWAPI GLFWframebuffersizefun glfwSetFramebufferSizeCallback(GLFWwindow* window, GLFWframebuffersizefun callback);
    GLFWAPI GLFWwindowcontentscalefun glfwSetWindowContentScaleCallback(GLFWwindow* window, GLFWwindowcontentscalefun callback);
    GLFWAPI void glfwPollEvents(void);
    GLFWAPI void glfwWaitEvents(void);
    GLFWAPI void glfwWaitEventsTimeout(double timeout);
    GLFWAPI void glfwPostEmptyEvent(void);
    GLFWAPI int glfwGetInputMode(GLFWwindow* window, int mode);
    GLFWAPI void glfwSetInputMode(GLFWwindow* window, int mode, int value);
    GLFWAPI int glfwRawMouseMotionSupported(void);
    GLFWAPI const char* glfwGetKeyName(int key, int scancode);
    GLFWAPI int glfwGetKeyScancode(int key);
    GLFWAPI int glfwGetKey(GLFWwindow* window, int key);
    GLFWAPI int glfwGetMouseButton(GLFWwindow* window, int button);
    GLFWAPI void glfwGetCursorPos(GLFWwindow* window, double* xpos, double* ypos);
    GLFWAPI void glfwSetCursorPos(GLFWwindow* window, double xpos, double ypos);
    GLFWAPI GLFWcursor* glfwCreateCursor(const GLFWimage* image, int xhot, int yhot);
    GLFWAPI GLFWcursor* glfwCreateStandardCursor(int shape);
    GLFWAPI void glfwDestroyCursor(GLFWcursor* cursor);
    GLFWAPI void glfwSetCursor(GLFWwindow* window, GLFWcursor* cursor);
    GLFWAPI GLFWkeyfun glfwSetKeyCallback(GLFWwindow* window, GLFWkeyfun callback);
    GLFWAPI GLFWcharfun glfwSetCharCallback(GLFWwindow* window, GLFWcharfun callback);
    GLFWAPI GLFWcharmodsfun glfwSetCharModsCallback(GLFWwindow* window, GLFWcharmodsfun callback);
    GLFWAPI GLFWmousebuttonfun glfwSetMouseButtonCallback(GLFWwindow* window, GLFWmousebuttonfun callback);
    GLFWAPI GLFWcursorposfun glfwSetCursorPosCallback(GLFWwindow* window, GLFWcursorposfun callback);
    GLFWAPI GLFWcursorenterfun glfwSetCursorEnterCallback(GLFWwindow* window, GLFWcursorenterfun callback);
    GLFWAPI GLFWscrollfun glfwSetScrollCallback(GLFWwindow* window, GLFWscrollfun callback);
    GLFWAPI GLFWdropfun glfwSetDropCallback(GLFWwindow* window, GLFWdropfun callback);
    GLFWAPI int glfwJoystickPresent(int jid);
    GLFWAPI const float* glfwGetJoystickAxes(int jid, int* count);
    GLFWAPI const unsigned char* glfwGetJoystickButtons(int jid, int* count);
    GLFWAPI const unsigned char* glfwGetJoystickHats(int jid, int* count);
    GLFWAPI const char* glfwGetJoystickName(int jid);
    GLFWAPI const char* glfwGetJoystickGUID(int jid);
    GLFWAPI void glfwSetJoystickUserPointer(int jid, void* pointer);
    GLFWAPI void* glfwGetJoystickUserPointer(int jid);
    GLFWAPI int glfwJoystickIsGamepad(int jid);
    GLFWAPI GLFWjoystickfun glfwSetJoystickCallback(GLFWjoystickfun callback);
    GLFWAPI int glfwUpdateGamepadMappings(const char* string);
    GLFWAPI const char* glfwGetGamepadName(int jid);
    GLFWAPI int glfwGetGamepadState(int jid, GLFWgamepadstate* state);
    GLFWAPI void glfwSetClipboardString(GLFWwindow* window, const char* string);
    GLFWAPI const char* glfwGetClipboardString(GLFWwindow* window);
    GLFWAPI double glfwGetTime(void);
    GLFWAPI void glfwSetTime(double time);
    GLFWAPI uint64_t glfwGetTimerValue(void);
    GLFWAPI uint64_t glfwGetTimerFrequency(void);
    GLFWAPI void glfwMakeContextCurrent(GLFWwindow* window);
    GLFWAPI GLFWwindow* glfwGetCurrentContext(void);
    GLFWAPI void glfwSwapBuffers(GLFWwindow* window);
    GLFWAPI void glfwSwapInterval(int interval);
    GLFWAPI int glfwExtensionSupported(const char* extension);
    GLFWAPI GLFWglproc glfwGetProcAddress(const char* procname);
    GLFWAPI int glfwVulkanSupported(void);
    GLFWAPI const char** glfwGetRequiredInstanceExtensions(uint32_t* count);
    GLFWAPI GLFWvkproc glfwGetInstanceProcAddress(VkInstance instance, const char* procname);
    GLFWAPI int glfwGetPhysicalDevicePresentationSupport(VkInstance instance, VkPhysicalDevice device, uint32_t queuefamily);
    GLFWAPI VkResult glfwCreateWindowSurface(VkInstance instance, GLFWwindow* window, const VkAllocationCallbacks* allocator, VkSurfaceKHR* surface);